--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = "~3.8"
 jupyterlab = "^3.2.0"
 numpy = "^1.21.2"
 pandas = "^1.3.3"
+invoke = "^1.6.0"
+kaggle = "^1.5.12"
+dask = {extras = ["distributed"], version = "^2021.10.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
